Fix css for getting right spacing in station edit page

--- a/network/static/css/pages/_station_edit.scss
+++ b/network/static/css/pages/_station_edit.scss
@@ -1,7 +1,7 @@
 .antenna-label, .frequency-ranges-label {
     display: inline-block;
     max-width: 100%;
-    margin-top: 5px;
+    margin: 5px 3px 0 0;
     font-weight: 700;
 }
 
